# frontendmobileapp/swagger.json
@@ -627,28 +627,6 @@
       }
     },
     "/api/events/event_info": {
-      "post": {
-        "responses": {
-          "201": {
-            "description": "Success"
-          }
-        },
-        "description": "Add event to events table,\n                        Can take an address id if the address is already within in the database,\n                        otherwise can be added line by line. Address isn't required to allow for online events.\n                        Image will be uploaded to S3 if provided.",
-        "operationId": "post_event_info",
-        "parameters": [
-          {
-            "name": "payload",
-            "required": true,
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/AddEventRequest"
-            }
-          }
-        ],
-        "tags": [
-          "events"
-        ]
-      },
       "get": {
         "responses": {
           "200": {
@@ -673,6 +651,28 @@
         "tags": [
           "events"
         ]
+      },
+      "post": {
+        "responses": {
+          "201": {
+            "description": "Success"
+          }
+        },
+        "description": "Add event to events table,\n                        Can take an address id if the address is already within in the database,\n                        otherwise can be added line by line. Address isn't required to allow for online events.\n                        Image will be uploaded to S3 if provided.",
+        "operationId": "post_event_info",
+        "parameters": [
+          {
+            "name": "payload",
+            "required": true,
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/AddEventRequest"
+            }
+          }
+        ],
+        "tags": [
+          "events"
+        ]
       }
     },
     "/api/events/event_info/{event_id}": {
@@ -684,6 +684,19 @@
           "type": "integer"
         }
       ],
+      "delete": {
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        },
+        "summary": "Delete event",
+        "description": "Delete event - only event creator can delete",
+        "operationId": "delete_event_management",
+        "tags": [
+          "events"
+        ]
+      },
       "put": {
         "responses": {
           "200": {
@@ -703,19 +716,6 @@
             }
           }
         ],
-        "tags": [
-          "events"
-        ]
-      },
-      "delete": {
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        },
-        "summary": "Delete event",
-        "description": "Delete event - only event creator can delete",
-        "operationId": "delete_event_management",
         "tags": [
           "events"
         ]
@@ -979,18 +979,26 @@
         "operationId": "post_create_post",
         "parameters": [
           {
-            "name": "payload",
+            "name": "content",
+            "in": "formData",
+            "type": "string",
             "required": true,
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/CreatePostRequest"
-            }
+            "description": "Content of the post"
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "type": "file",
+            "description": "Optional image file"
           }
         ],
         "security": [
           {
             "Bearer": []
           }
+        ],
+        "consumes": [
+          "multipart/form-data"
         ],
         "tags": [
           "feed"
@@ -1218,17 +1226,6 @@
           "type": "string"
         }
       ],
-      "delete": {
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        },
-        "operationId": "delete_get_media",
-        "tags": [
-          "media"
-        ]
-      },
       "get": {
         "responses": {
           "200": {
@@ -1236,6 +1233,17 @@
           }
         },
         "operationId": "get_get_media",
+        "tags": [
+          "media"
+        ]
+      },
+      "delete": {
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        },
+        "operationId": "delete_get_media",
         "tags": [
           "media"
         ]
@@ -1263,6 +1271,18 @@
       }
     },
     "/api/notifications/preferences": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        },
+        "summary": "Get user's notification preferences",
+        "operationId": "get_notification_preferences_resource",
+        "tags": [
+          "notifications"
+        ]
+      },
       "put": {
         "responses": {
           "200": {
@@ -1281,18 +1301,6 @@
             }
           }
         ],
-        "tags": [
-          "notifications"
-        ]
-      },
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        },
-        "summary": "Get user's notification preferences",
-        "operationId": "get_notification_preferences_resource",
         "tags": [
           "notifications"
         ]
@@ -1329,6 +1337,26 @@
       }
     },
     "/api/profile/email_notifications": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/EmailNotificationSettings"
+            }
+          }
+        },
+        "summary": "Get email notification settings",
+        "operationId": "get_email_notifications",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "tags": [
+          "profile"
+        ]
+      },
       "post": {
         "responses": {
           "200": {
@@ -1347,26 +1375,6 @@
             }
           }
         ],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "tags": [
-          "profile"
-        ]
-      },
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/EmailNotificationSettings"
-            }
-          }
-        },
-        "summary": "Get email notification settings",
-        "operationId": "get_email_notifications",
         "security": [
           {
             "Bearer": []
@@ -1408,6 +1416,26 @@
       }
     },
     "/api/profile/profile_visibility": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/ProfileVisibilitySettings"
+            }
+          }
+        },
+        "summary": "Get profile visibility settings",
+        "operationId": "get_profile_visibility",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "tags": [
+          "profile"
+        ]
+      },
       "post": {
         "responses": {
           "200": {
@@ -1426,26 +1454,6 @@
             }
           }
         ],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
-        "tags": [
-          "profile"
-        ]
-      },
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/ProfileVisibilitySettings"
-            }
-          }
-        },
-        "summary": "Get profile visibility settings",
-        "operationId": "get_profile_visibility",
         "security": [
           {
             "Bearer": []
@@ -2137,18 +2145,6 @@
       },
       "type": "object"
     },
-    "CreatePostRequest": {
-      "required": [
-        "content"
-      ],
-      "properties": {
-        "content": {
-          "type": "string",
-          "description": "Content of the post"
-        }
-      },
-      "type": "object"
-    },
     "GetReactionsResponse": {
       "properties": {
         "reactions": {
@@ -2514,6 +2510,29 @@
       },
       "type": "object"
     },
+    "EventInfoQuery": {
+      "required": [
+        "event_ids"
+      ],
+      "properties": {
+        "event_ids": {
+          "type": "array",
+          "description": "takes list of Ids for event to be fetched",
+          "items": {
+            "type": "integer"
+          }
+        },
+        "page": {
+          "type": "integer",
+          "description": "Page Number, default = 1"
+        },
+        "per_page": {
+          "type": "integer",
+          "description": "Number of Events per page, default = 20"
+        }
+      },
+      "type": "object"
+    },
     "AddEventRequest": {
       "required": [
         "event_time",
@@ -2570,29 +2589,6 @@
         "post_code": {
           "type": "string",
           "description": "post code"
-        }
-      },
-      "type": "object"
-    },
-    "EventInfoQuery": {
-      "required": [
-        "event_ids"
-      ],
-      "properties": {
-        "event_ids": {
-          "type": "array",
-          "description": "takes list of Ids for event to be fetched",
-          "items": {
-            "type": "integer"
-          }
-        },
-        "page": {
-          "type": "integer",
-          "description": "Page Number, default = 1"
-        },
-        "per_page": {
-          "type": "integer",
-          "description": "Number of Events per page, default = 20"
         }
       },
       "type": "object"
